# dolphin-memory-engine

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Dolphin-memory-engine.default.props  Dolphin-memory-engine.sln  LICENSE  README.md  Roadmap.md  appveyor.yml
.github/assets/: Dolphin-memory-engine.desktop  appimage.sh  dolphin-memory-engine.desktop
.github/workflows/: build.yml  lint.yml  tag-build.yml
Source/: .clang-format  .clang-tidy  CMakeLists.txt  Dolphin-memory-engine.default.props  Dolphin-memory-engine.sln  Dolphin-memory-engine.vcxproj  MacSetup.sh  dolphin-memory-engine.default.props  dolphin-memory-engine.plist  dolphin-memory-engine.sln  dolphin-memory-engine.vcxproj  main.cpp
Source/CheatEngineParser/: CheatEngineParser.cpp  CheatEngineParser.h
Source/Common/: CommonTypes.h  CommonUtils.h  MemoryCommon.cpp  MemoryCommon.h
Source/Common/PPC/: PowerPCAssembler.cpp  PowerPCAssembler.h  PowerPCDisassembler.cpp  PowerPCDisassembler.h
Source/DolphinProcess/: DolphinAccessor.cpp  DolphinAccessor.h  IDolphinProcess.h
Source/DolphinProcess/Darwin/: DarwinDolphinProcess.cpp  DarwinDolphinProcess.h
Source/DolphinProcess/Linux/: LinuxDolphinProcess.cpp  LinuxDolphinProcess.h
Source/DolphinProcess/Mac/: MacDolphinProcess.cpp  MacDolphinProcess.h
Source/DolphinProcess/Windows/: WindowsDolphinProcess.cpp  WindowsDolphinProcess.h
Source/GUI/: GUICommon.cpp  GUICommon.h  MainWindow.cpp  MainWindow.h
Source/GUI/MemCopy/: DlgCopy.cpp  DlgCopy.h
Source/GUI/MemScanner/: MemScanWidget.cpp  MemScanWidget.h  ResultsListModel.cpp  ResultsListModel.h
Source/GUI/MemViewer/: MemViewer.cpp  MemViewer.h  MemViewerWidget.cpp  MemViewerWidget.h
Source/GUI/MemWatcher/: DlgAddWatchEntry.cpp  DlgAddWatchEntry.h  DlgChangeType.cpp  DlgChangeType.h  DlgImportCTFile.cpp  DlgImportCTFile.h  MemWatchDelegate.cpp  MemWatchDelegate.h  MemWatchModel.cpp  MemWatchModel.h  MemWatchTreeNode.cpp  MemWatchTreeNode.h  MemWatchWidget.cpp  MemWatchWidget.h
Source/GUI/MemWatcher/Dialogs/: DlgAddWatchEntry.cpp  DlgAddWatchEntry.h  DlgChangeType.cpp  DlgChangeType.h  DlgImportCTFile.cpp  DlgImportCTFile.h
Source/GUI/Settings/: DlgSettings.cpp  DlgSettings.h  SConfig.cpp  SConfig.h
Source/GUI/StructEditor/: StructDetailModel.cpp  StructDetailModel.h  StructEditorWidget.cpp  StructEditorWidget.h  StructSelectModel.cpp  StructSelectModel.h
Source/GUI/Widgets/: AddressInputWidget.cpp  AddressInputWidget.h
Source/MemoryScanner/: MemoryScanner.cpp  MemoryScanner.h
Source/MemoryWatch/: MemWatchEntry.cpp  MemWatchEntry.h  MemWatchTreeNode.cpp  MemWatchTreeNode.h  MemoryWatch.cpp  MemoryWatch.h
Source/Resources/: logo.icns  resource.qrc
Source/Structs/: FieldDef.cpp  FieldDef.h  StructDef.cpp  StructDef.h  StructDefMap.cpp  StructDefMap.h  StructTreeNode.cpp  StructTreeNode.h
Source/include/: version.h.in
Tools/: MacDeploy.sh  MacSetup.sh  format.sh
